# cuda-profiling

./: CMakeLists.txt
src/: matmul_naive.cu  matmul_naive.cuh
